# Investigacion-Criminalistica

Clue/: README.md  main.py  pyproject.toml
Clue/crimes/: __init__.py  herencia_hacienda_rosal.py  red_puerto_sombras.py  robo_expreso_sur.py  sabotaje_archivo_sonoro.py  sabotaje_pharmax.py  veneno_villa_espinas.py
Clue/notebooks/: guia_objetos_python.ipynb  parte1_model_checking.ipynb  parte2_cnf.ipynb  parte3_predicados.ipynb
Clue/src/: backward_chaining.py  cnf_transform.py  crime_case.py  forward_chaining.py  logic_core.py  model_checking.py  predicate_logic.py  resolution.py  tui.py  utils.py
Clue/tests/: test_cnf.py  test_model_checking.py  test_predicates.py
